# my_project_django

M_19_prod/: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
M_19_prod/mysite/mysite/: settings.py  urls.py
